# fastgeoref

./: FastGeoRef_FAQ.docx  FastGeoRef_functions.docx  LICENSE.py  README.MD  pyproject.toml  requirements.txt
example script/: example_script.py
fastgeoref/: __init__.py  datagen.py  georef.py  modelbuild.py  objtrackauto.py  objtrackmanual.py  tracking_functions.py
fastgeoref.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
