[project]
name = "fastgeoref"
version = "0.1.0"
description = "Tools for detecting, tracking, and geo-referencing objects from drone video"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Imran Samad", email = "imransamad7@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.0",
    "scikit-learn==1.3.2",
    "pandas==2.1.1",
    "filterpy==1.4.5",
    "pysrt==1.1.2",
    "shapely==2.0.6",
    "scipy==1.11.3",
    "tensorflow==2.14.0",
    "os"
]

[project.scripts]
fastgeoref-datagen = "fastgeoref.datagen:gui_entry"
fastgeoref-modelbuild = "fastgeoref.modelbuild:gui_entry"
fastgeoref-objtrackauto = "fastgeoref.objtrackauto:gui_entry"
fastgeoref-georef = "fastgeoref.georef:gui_entry"
fastgeoref-objtrackmanual = "fastgeoref.objtrackmanual:gui_entry"